--- a/project/framework/www/css/index.scss
+++ b/project/framework/www/css/index.scss
@@ -1,3 +1,6 @@
+$color : #03A9F4;
+$topcolor : #ff5252;
+
 @font-face {
   font-family: 'iconfont';
   src: url("iconfont.eot");
@@ -19,9 +22,12 @@
 
 body {
   background-color: #fcfcfc;
+  height: 100%;
 }
 
-
+.container{
+  max-width: 1580px;
+}
 a,body,div,h1,li,input,button {
   padding: 0;
   margin: 0;
@@ -41,13 +47,14 @@ a {
 }
 
 html {
+  height: 100%;
   font-size: 14px;
   font-family: "Roboto", sans-serif;
 }
 @media screen and (min-width: 0) {
   .footer,
   .header,
-  .section {
+  .main {
     padding-left: 300px;
     box-sizing: border-box;
     min-width: 300px;
@@ -60,9 +67,10 @@ html {
     width: 100%;
     box-shadow: 0 1px 1px 1px rgba(0,0,0,.2);
 
+
     .container {
       width: 100%;
-      max-width: 1250px;
+      max-width: 1580px;
       overflow: hidden;
 
       #more {
@@ -210,25 +218,96 @@ html {
     //haader top
     .top {
       height: 123px;
-      background-color: #ff5252;
+      background-color: $color;
+      .title{
+        color: #fff;
+        height: 100%;
+        margin: 0 auto;
+        line-height: 123px;
+        text-align: center;
+      }
     }
   }
 
 
-
-  .section{
-    margin-top: 123px;
+    //main
+  .main{
+    padding-top: 123px;
     background-color: #eee;
+    .container{
+      height: calc(100% - 123px);
+      box-sizing: border-box;
+      background: url('../templates/bg.jpg') no-repeat;
+      background-size: cover;
+    }
+    .login,.register{
+      margin: 0 auto;
+      padding: 58px 18px;
+      width: 360px;
+      height: 425px;
+      background:url('');
+      background-color: #333;
+      .title{
+        width: 100%;
+        height: 50px;
+        color:#fff;
+        line-height: 50px;
+        font-weight: 700;
+        vertical-align: text-bottom;
+        font-size: 16px;
+        cursor: default;
+      }
+      .value{
+        height: 50px;
+        width: 100%;
+        font-size: 16px;
+        padding:5px 20px;
+      }
+      .sumbit{
+        width: 100%;
+        height: 50px;
+        color: #fff;
+        font-size: 16px;
+        background-color: $color;
+        border-radius: 2px;
+        margin-top: 45px;
+        cursor: pointer;
+        &:hover{
+          background-color: #2196F3;
+        }
+      }
+      .section{
+        margin-top: 30px;
+        width: 100%;
+        height: 40px;
+        .signup,.forgot{
+          color: #fff;
+          width: 100px;
+          float: left;
+          height: 100%;
+          width: 50%;
+          display: inline-block;
+          line-height: 40px;
+          text-align: center;
+          box-sizing: border-box;
+          font-size: 16px;
+
+        }
+      }
+    }
   }
 
-
+  // .footer{
+  //   height: 100px;
+  //   background-color: $topcolor;
+  // }
 
 }
 @media only screen and (max-width:768px) {
   .footer,
   .header,
-  .section {
-    padding-left: 0;
+  .main {
+    padding-left:  0;
   }
 
   .side-nav {
