--- a/project/framework/www/templates/login.html
+++ b/project/framework/www/templates/login.html
@@ -9,7 +9,7 @@
       <input class="sumbit" ng-click="logintitle()" type="submit" value="登陆" />
     </form>
     <div class="section">
-      <a class="signup" ng-click="registertitle()" href="#!/register">注册账号</a>
+      <a class="reg" ng-click="registertitle()" href="#!/register">注册账号</a>
       <a class="forgot" href="javascript:;">忘记密码</a>
     </div>
   </div>
