--- a/project/framework/www/css/index.css
+++ b/project/framework/www/css/index.css
@@ -66,6 +66,7 @@ html {
     box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.2);
   }
   .header .container {
+    z-index: 200;
     width: 100%;
     max-width: 1620px;
     overflow: hidden;
@@ -176,7 +177,6 @@ html {
   .header .side-nav .box {
     line-height: 44px;
     height: 44px;
-    padding: 0 30px;
     transition: background-color 0.3s ease-out;
   }
   .header .side-nav .box:hover {
@@ -186,6 +186,7 @@ html {
     color: #333;
     font-size: 15px;
     font-weight: 700;
+    padding: 0 30px;
   }
   .header .side-nav li {
     float: none;
@@ -232,10 +233,10 @@ html {
   .main .login .value, .main .register .value {
     height: 50px;
     width: 100%;
-    box-sizing: border-box;
-    margin-right: 20px;
     font-size: 16px;
     padding: 5px 20px;
+    z-index: 0;
+    border: 1px solid transparent;
   }
   .main .login .sumbit, .main .register .sumbit {
     width: 100%;
@@ -255,17 +256,24 @@ html {
     width: 100%;
     height: 40px;
   }
-  .main .login .section .signup, .main .login .section .forgot, .main .register .section .signup, .main .register .section .forgot {
+  .main .login .section .log, .main .register .section .log {
+    display: inline-block;
+    width: auto;
+    margin: 0 auto;
+  }
+  .main .login .section .reg, .main .login .section .forgot, .main .login .section .log, .main .register .section .reg, .main .register .section .forgot, .main .register .section .log {
     color: #fff;
     width: 100px;
-    float: left;
-    height: 100%;
-    width: 50%;
-    display: inline-block;
-    line-height: 40px;
+    height: 45px;
     text-align: center;
     box-sizing: border-box;
     font-size: 16px;
+  }
+  .main .login .section .reg, .main .login .section .forgot, .main .register .section .reg, .main .register .section .forgot {
+    float: left;
+    width: 50%;
+    display: inline-block;
+    line-height: 40px;
   }
 }
 @media only screen and (max-width: 768px) {
