--- a/project/framework/www/templates/register.html
+++ b/project/framework/www/templates/register.html
@@ -2,15 +2,15 @@
 <div class="register" ng-controller="RegisterController">
   <form action="http://localhost/users/register" method="post">
     <a class="title" href="javascript:;">用户名</a>
-    <input class="value" ng-model="user" name="user" type="text" placeholder="输入用户名"/>
+    <input class="value" ng-model="user" id="user" ng-change="isExist()" name="user" type="text" placeholder="输入用户名"/>
     <a class="title" href="javascript:;">密码</a>
-    <input class="value" ng-model="password" name="password" type="text" placeholder="输入密码"/>
-
+    <input class="value" ng-model="password" name="password" type="password" placeholder="输入密码"/>
+    <a class="title">确认密码</a>
+    <input  class="value" ng-change='errorcomfirm()' id="comfirm" ng-model="comfirm" type="password" placeholder="请再次确认密码" />
     <input class="sumbit" ng-click="registertitle()" type="submit" value="注册" />
   </form>
   <div class="section">
-    <a class="signup" ng-click="changetitle()" href="#!/login">登录账号</a>
-    <a class="forgot" href="javascript:;">忘记密码</a>
+    <a class="log" ng-click="changetitle()" href="#!/login">登录账号</a>
   </div>
 </div>
 </div>
