--- a/project/framework/www/css/index.scss
+++ b/project/framework/www/css/index.scss
@@ -288,12 +288,15 @@ html {
           margin: 0 auto;
         }
         .reg,.forgot,.log{
-          color: #fff;
+          color: #eee;
           width: 100px;
           height: 45px;
           text-align: center;
           box-sizing: border-box;
           font-size: 16px;
+          &:hover{
+            color:#fff;
+          }
         }
         .reg,.forgot{
           float: left;
